--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -111,7 +111,7 @@
                           method="POST">
                         {% csrf_token %}
                         <input name="t" type="hidden" value="make_public"/>
-                        <button {% if not cm.can_be_public_or_discoverable %} disabled {% endif %}
+                        <button {% if not cm.can_be_public_or_discoverable or cm.raccess.public%} disabled {% endif %}
                                 id="btn-public" data-toggle="tooltip" data-placement="auto"
                                 title='Can be viewed and downloaded by anyone.' type="submit"
                                 class="btn btn-default {% if cm.raccess.public %}active{% endif %}">Public
@@ -124,7 +124,7 @@
                           method="POST">
                         <input name="t" type="hidden" value="make_discoverable"/>
                         {% csrf_token %}
-                        <button {% if not cm.can_be_public_or_discoverable %} disabled {% endif %}
+                        <button {% if not cm.can_be_public_or_discoverable %} disabled {% elif not cm.raccess.public and discoverable%} disabled {% endif %}
                                 id="btn-discoverable" data-toggle="tooltip" data-placement="auto"
                                 title='Metadata is public but data is protected.' type="submit"
                                 class="btn btn-default {% if not cm.raccess.public and discoverable %}active{% endif %}">Discoverable
@@ -137,7 +137,8 @@
                           method="POST">
                         <input name="t" type="hidden" value="make_private"/>
                         {% csrf_token %}
-                        <button id="btn-private" data-toggle="tooltip" data-placement="auto"
+                        <button {% if not cm.raccess.public and not discoverable %} disabled {% endif %}
+                                id="btn-private" data-toggle="tooltip" data-placement="auto"
                                 title='Can be viewed and downloaded only by designated users or research groups.' type="submit"
                                 class="btn btn-default {% if not cm.raccess.public and not discoverable %}active{% endif %}">Private
                         </button>
