--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -72,7 +72,7 @@
                 <div class="col-sm-8 col-xs-12 pull-right">
                     <div id="search-container" class="input-group">
                         <span class="glyphicon glyphicon-search search-icon"></span>
-                        <input id="resource-search-input" type="text" class="form-control" placeholder="Search"/>
+                        <input id="resource-search-input" type="text" class="form-control resource-search-input" placeholder="Search"/>
 
                         <div class="input-group-btn">
                             <div class="btn-group" role="group">
