--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -51,79 +51,95 @@
         {% if cm.resource_type != "ToolResource" %}
             <div class="col-sm-12 content-block">
                 <h3>Content</h3>
+
+                <div class="file-browser">
+
+                    <div id="file-browser-controls" class="row">
+                        <div class="col-xs-6">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <button type="button" class="btn btn-default fb-back"><span
+                                        class="glyphicon glyphicon-arrow-left"></span></button>
+                                <button type="button" class="btn btn-default"><span
+                                        class="glyphicon glyphicon-arrow-right"></span></button>
+                            </div>
+
+                            <button class="btn btn-default"><span
+                                    class="glyphicon glyphicon-arrow-up"></span></button>
+                        </div>
+
+                        <div class="col-xs-6">
+                            <div class="input-group file-browser-search">
+                                <span class="glyphicon glyphicon-search search-icon"></span>
+                                <input type="text" class="form-control resource-search-input"
+                                       placeholder="Search">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="files-container">
+                        <div class="file-browser-breadcrumb">
+                            <ol class="breadcrumb">
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">Library</a></li>
+                              <li class="active">Data</li>
+                            </ol>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-2 fb-folder text-center">
+                                <span class="glyphicon glyphicon-folder-close"></span>
+                                <div><small>Some folder</small></div>
+                            </div>
+
+                            <div class="col-xs-2 fb-file text-center">
+                                <span class="glyphicon glyphicon-file"></span>
+                                <div><small>Some file.txt</small></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
                 {% if show_content_files %}
                     <div class="custom-well">
                         {% if cm.files.all %}
-                        <div class="table-container">
-                            <table class="table-plain table-striped">
-                                {% for f in cm.files.all %}
-                                    {% if f.resource_file %}
-                                        {#======= Modal window begins =======#}
-                                        {% if page.perms.change and metadata_form %}
-                                            <div class="modal fade" id="delete-resource-file-{{ f.pk }}" tabindex="-1"
-                                                 role="dialog"
-                                                 aria-labelledby="myModalLabel" aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <button type="button" class="close" data-dismiss="modal"
-                                                                    aria-hidden="true">&times;</button>
-                                                            <h4 class="modal-title">Confirm file deletion</h4>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            Consider saving a copy of the file before you delete it if
-                                                            it is
-                                                            important to you.
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-default"
-                                                                    data-dismiss="modal">
-                                                                Cancel
-                                                            </button>
-                                                            <a type="button" class="btn btn-danger"
-                                                               href="/hsapi/_internal/{{ cm.short_id }}/delete-resource-file/{{ f.pk }}/">Delete</a>
-                                                        </div>
+                        <div>
+                            {% for f in cm.files.all %}
+                                {% if f.resource_file %}
+                                    {#======= Modal window begins =======#}
+                                    {% if page.perms.change and metadata_form %}
+                                        <div class="modal fade" id="delete-resource-file-{{ f.pk }}" tabindex="-1"
+                                             role="dialog"
+                                             aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"
+                                                                aria-hidden="true">&times;</button>
+                                                        <h4 class="modal-title">Confirm file deletion</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Consider saving a copy of the file before you delete it if
+                                                        it is
+                                                        important to you.
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default"
+                                                                data-dismiss="modal">
+                                                            Cancel
+                                                        </button>
+                                                        <a type="button" class="btn btn-danger"
+                                                           href="/hsapi/_internal/{{ cm.short_id }}/delete-resource-file/{{ f.pk }}/">Delete</a>
                                                     </div>
                                                 </div>
                                             </div>
-                                        {% endif %}
-                                        {#======= Modal window ends =======#}
-                                        <tr>
-                                            <td>
-                                                <span class="glyphicon glyphicon-file file-icon"></span>
-                                        <span>
-                                            <span class="label-file-name">{{ f.resource_file.name|slice:"33:" }}</span>
-                                            <p class="label-file-size">{{ f.resource_file.size|filesizeformat }}</p>
-                                        </span>
-                                            </td>
-                                            {#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
-                                            <td>
-                                                {% if page.perms.change and metadata_form %}
-
-                                                    <a href="{{ f.resource_file.url }}"><span data-toggle="modal"
-                                                                                              data-target="#delete-resource-file-{{ f.pk }}"
-                                                                                              data-placement="auto"
-                                                                                              title="Delete"
-                                                                                              class="glyphicon glyphicon-trash icon-button btn-remove"></span></a>
-
-                                                {% endif %}
-
-                                                <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip"
-                                                                                          data-placement="auto"
-                                                                                          title="Download"
-                                                                                          class="glyphicon glyphicon-download icon-button btn-download"></span></a>
-
-                                                {% if preview %}
-                                                    <a href="{{ preview }}"><span data-toggle="tooltip"
-                                                                                  data-placement="auto"
-                                                                                  title="Preview"
-                                                                                  class="glyphicon glyphicon-eye-open icon-button"></span></a>
-                                                {% endif %}
-                                            </td>
-                                        </tr>
+                                        </div>
                                     {% endif %}
-                                {% endfor %}
-                            </table>
+                                    {#======= Modal window ends =======#}
+
+                                {% endif %}
+                            {% endfor %}
                         </div>
                         {% else %}
                             <i>No files have been uploaded.</i>
