--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -70,8 +70,8 @@
                         <div class="col-xs-6">
                             <div class="input-group file-browser-search">
                                 <span class="glyphicon glyphicon-search search-icon"></span>
-                                <input type="text" class="form-control resource-search-input"
-                                       placeholder="Search">
+                                <input type="text" class="form-control fb-input-search"
+                                       placeholder="Search current directory">
                             </div>
                         </div>
 
@@ -80,23 +80,44 @@
                     <div class="files-container">
                         <div class="file-browser-breadcrumb">
                             <ol class="breadcrumb">
-                              <li><a href="#">Home</a></li>
-                              <li><a href="#">Library</a></li>
+                              <li><a href="#">Foo</a></li>
+                              <li><a href="#">Bar</a></li>
                               <li class="active">Data</li>
                             </ol>
                         </div>
 
                         <div class="row">
-                            <div class="col-xs-2 fb-folder text-center">
-                                <span class="glyphicon glyphicon-folder-close"></span>
-                                <div><small>Some folder</small></div>
+                            <div class="col-xs-2 fb-folder ">
+                                <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                     aria-expanded="true">
+                                    <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                    <div>
+                                        <small class="fb-file-name">Some folder</small>
+                                    </div>
+                                </div>
+
+                                <ul class="dropdown-menu fb-dropdown" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                    <li><a href="#"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                </ul>
                             </div>
 
-                            <div class="col-xs-2 fb-file text-center">
-                                <span class="glyphicon glyphicon-file"></span>
-                                <div><small>Some file.txt</small></div>
-                            </div>
+                            <div class="col-xs-2 fb-file">
+                                <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                     aria-expanded="true">
+                                    <span class="glyphicon glyphicon-file"></span>
 
+                                    <div class="fb-file-name">
+                                        <small>Some fileeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee asfdsaf.txt</small>
+                                    </div>
+                                </div>
+
+                                <ul class="dropdown-menu fb-dropdown" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                    <li><a href="#"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
