--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -47,7 +47,7 @@
                                     {% for item in values %}
                                         {% if item.1 > 0 %}
                                             <li class="list-group-item clearfix">
-                                                <a class="btn btn-default pull-left" onclick="formURL('{{ key }}', '{{ item.0 }}')" role="button">{{ item.0 }}</a>
+                                                <a class=" pull-left" onclick="formURL('{{ key }}', '{{ item.0 }}')" role="button">{{ item.0 }}</a>
                                                 <!--<input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}-->
                                                     {% if item.1 >= 1 and item.1 < 2 %}
                                                         <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
@@ -150,31 +150,24 @@
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
     <script src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
     <script type="text/javascript">
-
-        //var json_results = [];
-
+        var minFloatingNumber = 0.0001;
         var map = null;
-        //var bounds = new google.maps.LatLngBounds();
-        //var info_window = new google.maps.InfoWindow();
         var initMap = function(json_results) {
             var markers = [];
+            var modified_points_data = [];
+            var modified_boxes_data = [];
+            var modified_data = [];
             var bounds = new google.maps.LatLngBounds();
-           // var myLatLng = {lat: 37.4419, lng: -122.1419};
-           /* var infowindow = new google.maps.InfoWindow({
-                content: 'resource 1'
-            });*/
             map = new google.maps.Map(document.getElementById('discover-map'), {
                 zoom: 2,
                 mapTypeId: google.maps.MapTypeId.TERRAIN,
                 zoomControl: true,
                 scaleControl: true
-               // center: myLatLng
             });
             map.enableKeyDragZoom({
                 key: 'shift'
             });
 
-            //var info_content = [];
             var info_window = new google.maps.InfoWindow();
             var rectangle = new google.maps.Rectangle({
                 strokeColor: '#FF0000',
@@ -190,39 +183,69 @@
                     west: 0
                 }
             });
-            for(var  i = 0; i < json_results.length; i++ ) {
-                //var data = json_results[i];
-                var link = json_results[i].get_absolute_url;
-                var title = json_results[i].title;
-                var info_content = '"<a href="' + json_results[i].get_absolute_url + '">' + json_results[i].title + '</a>';
 
-                if(json_results[i].coverage_type == 'point') {
-                    var lat = parseFloat(json_results[i].north);
+            for (var  i = 0; i < json_results.length; i++ ) {
+                if (json_results[i].coverage_type == 'point') {
+                    checkDuplicatePointResults(modified_points_data, json_results[i]);
+                   /* var lat = parseFloat(json_results[i].north);
                     var lng = parseFloat(json_results[i].east);
-                    createPointResourceMarker(lat, lng, info_content, bounds, info_window, rectangle, markers);
+                    createPointResourceMarker(lat, lng, info_content, bounds, info_window, rectangle, markers);*/
 
-                }else if(json_results[i].coverage_type == 'box'){
-                    var northlimit = parseFloat(json_results[i].northlimit);
+                } else if(json_results[i].coverage_type == 'box') {
+                    checkDuplicateBoxResults(modified_boxes_data, json_results[i]);
+                    /*var northlimit = parseFloat(json_results[i].northlimit);
                     var southlimit = parseFloat(json_results[i].southlimit);
                     var eastlimit = parseFloat(json_results[i].eastlimit);
                     var westlimit = parseFloat(json_results[i].westlimit);
-                    createBoxResourceMarker (northlimit, southlimit, eastlimit, westlimit, info_content, bounds, info_window, rectangle, markers);
+                    createBoxResourceMarker (northlimit, southlimit, eastlimit, westlimit, info_content, bounds, info_window, rectangle, markers);*/
 
-                }else{
+                } else {
                     continue;
                 }
 
             }
 
+            modified_points_data.forEach(function(point){
+               var info_content = point.info_link;
+                var lat = parseFloat(point.north);
+                var lng = parseFloat(point.east);
+                createPointResourceMarker(lat, lng, info_content, bounds, info_window, rectangle, modified_data);
+            });
+
+            modified_boxes_data.forEach(function(box){
+                var info_content = box.info_link;
+                var northlimit = parseFloat(box.northlimit);
+                var southlimit = parseFloat(box.southlimit);
+                var eastlimit = parseFloat(box.eastlimit);
+                var westlimit = parseFloat(box.westlimit);
+                createBoxResourceMarker (northlimit, southlimit, eastlimit, westlimit, info_content, bounds, info_window, rectangle, markers);
+            });
+
+            /*for (var i = 0; i < modified_data.length; i++) {
+                var link = modified_data[i].get_absolute_url;
+                var info_content = modified_data[i].info_link;
+                if (modified_data[i].coverage_type == 'point') {
+                    var lat = parseFloat(modified_data[i].north);
+                    var lng = parseFloat(modified_data[i].east);
+                    createPointResourceMarker(lat, lng, info_content, bounds, info_window, rectangle, modified_data);
+
+                } else if(modified_data[i].coverage_type == 'box') {
+                    var northlimit = parseFloat(modified_data[i].northlimit);
+                    var southlimit = parseFloat(modified_data[i].southlimit);
+                    var eastlimit = parseFloat(modified_data[i].eastlimit);
+                    var westlimit = parseFloat(modified_data[i].westlimit);
+                    createBoxResourceMarker (northlimit, southlimit, eastlimit, westlimit, info_content, bounds, info_window, rectangle, markers);
+
+                } else {
+                    continue;
+                }
+            }*/
+
             map.fitBounds(bounds);
-            //(optional) restore the zoom level after the map is done scaling
             var listener = google.maps.event.addListener(map, "idle", function () {
                 map.setZoom(2);
                 google.maps.event.removeListener(listener);
             });
-            //console.log("markers length" + markers.length);
-            //var mcOptions = {gridSize: 50, maxZoom: 15};
-            //var mc = new MarkerClusterer(map, [], mcOptions);
             var markerCluster = new MarkerClusterer(map, markers);
         }
 
@@ -265,17 +288,58 @@
                         new google.maps.LatLng(southlimit, eastlimit)
                 );
                 rectangle.set('bounds', rectBounds);
-                //map.setZoom(3);
-                /*rectangle = new google.maps.Rectangle({
-
-                        bounds: rectBounds,
-
-                });*/
 
             });
             bounds.extend(latlng);
         }
 
+        var checkDuplicatePointResults = function (modified_points_data, test){
+            var test_lat = parseFloat(test.north);
+            var test_lng = parseFloat(test.east);
+            var existed = false;
+            modified_points_data.forEach(function(item){
+                var item_lat = parseFloat(item.north);
+                var item_lng = parseFloat(item.east);
+
+                var lat_diff = Math.abs(test_lat - item_lat);
+                var lng_diff = Math.abs(test_lng - item_lng);
+                if (lat_diff < minFloatingNumber && lng_diff < minFloatingNumber) {
+                    item.title = item.title + "<br />" + test.title;
+                    item.info_link += '<br />' + '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
+                    //console.log("point: " + item.title);
+                    existed = true;
+                }
+            });
+            if (!existed){
+                test.info_link = '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
+                modified_points_data.push(test);
+            }
+        }
+
+        var checkDuplicateBoxResults = function (modified_boxes_data, test){
+            var test_lat = (parseFloat(test.northlimit) + parseFloat(test.southlimit)) / 2;
+            var test_lng = (parseFloat(test.eastlimit) + parseFloat(test.westlimit)) / 2;
+            var existed = false;
+            modified_boxes_data.forEach(function(item){
+                var item_lat = (parseFloat(item.northlimit) + parseFloat(item.southlimit)) / 2;
+                var item_lng = (parseFloat(item.eastlimit) + parseFloat(item.westlimit)) / 2;
+
+                var lat_diff = Math.abs(test_lat - item_lat);
+                var lng_diff = Math.abs(test_lng - item_lng);
+
+                if (lat_diff < minFloatingNumber && lng_diff < minFloatingNumber) {
+                    item.title = item.title + "<br />" + test.title;
+                    item.info_link += '<br />' + '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
+                    //console.log("box: " + item.title);
+                    existed = true;
+                    //return;
+                }
+            });
+            if (!existed){
+                test.info_link = '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
+                modified_boxes_data.push(test);
+            }
+        }
         var reorderDivs = function() {
             var faceted_fields = ['author', 'subjects', 'resource_type', 'public', 'owners_names', 'discoverable'];
             var div_ordering = [];
@@ -308,16 +372,11 @@
             var currentURL = window.location.href.split('#')[0];
             var currentHash = window.location.href.split('#')[1];
             var requestURL = currentURL + "&selected_facets="+key+"_exact:"+value + "#" + currentHash;
+            map = null;
             window.location = requestURL;
         }
 
         $(document).ready(function () {
-            //console.log(res);
-            //google.maps.event.addDomListener(window, 'load', initMap);
-            //var titles = [];
-
-            var query = window.location.search;
-            console.log("hi: " + query);
             $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
                 var tabId = $(e.target).attr("href").substr(1);
                 window.location.hash = tabId;
@@ -327,27 +386,15 @@
                         type: "GET",
                         url: requestURL,
                         dataType: 'json',
-                        /*data: {
-                            'q': $("#id_q").val(),
-                        },*/
                         success: function(data) {
                             console.log("success");
-                            //console.log(data);
-                            //markers = [];
-                           // json_results = [];
                             var json_results = [];
                             for(var j = 0; j < data.length; j++){
                                 var item = $.parseJSON(data[j]);
                                 json_results.push(item);
                             }
                             console.log(json_results);
-                            //if (!($(search_results).not(json_results).length === 0 && $(json_results).not(search_results).length === 0)){
-
-                            //   copySearchResults(search_results);
-                                initMap(json_results);
-
-                            //}
-                            //console.log(json_results);
+                            initMap(json_results);
 
                         }
                         , failure: function(data){
@@ -382,6 +429,10 @@
                     }
                 }
             });
+
+            /**
+             * temporarily keep the following functions for checkboxes
+             */
             $(".faceted-selections").click(function () {
                 var tokens = $(this).val().split(",");
                 var key = tokens[0];
