--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -107,7 +107,7 @@
                                     <div class="nav-bar-profile-pic-thumbnail round-image pull-left"></div>
                                 </a>
                             {% endif %}
-                            <ul class="dropdown-menu arrow_box">
+                            <ul class="dropdown-menu arrow_box arrow_box_top_right">
                                 <li class="account">
                                     <div class="row">
                                         <div class="col-sm-4">
