Minor style changes

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -93,6 +93,92 @@
 
                                     <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
                                         <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                        <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="fb-folder">
+                                    <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                         aria-expanded="true">
+                                        <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                        <div>
+                                            <small class="fb-file-name">Some folder</small>
+                                        </div>
+                                    </div>
+
+                                    <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                        <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="fb-folder">
+                                    <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                         aria-expanded="true">
+                                        <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                        <div>
+                                            <small class="fb-file-name">Some folder</small>
+                                        </div>
+                                    </div>
+
+                                    <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                        <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="fb-folder">
+                                    <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                         aria-expanded="true">
+                                        <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                        <div>
+                                            <small class="fb-file-name">Some folder</small>
+                                        </div>
+                                    </div>
+
+                                    <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                        <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="fb-folder">
+                                    <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                         aria-expanded="true">
+                                        <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                        <div>
+                                            <small class="fb-file-name">Some folder</small>
+                                        </div>
+                                    </div>
+
+                                    <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
+                                        <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="fb-folder">
+                                    <div class="text-center" data-toggle="dropdown" aria-haspopup="true"
+                                         aria-expanded="true">
+                                        <span class="glyphicon glyphicon-folder-close glyphicon-folder"></span>
+
+                                        <div>
+                                            <small class="fb-file-name">Some folder</small>
+                                        </div>
+                                    </div>
+
+                                    <ul class="dropdown-menu fb-dropdown arrow_box arrow_box_top_center" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#"><span class="glyphicon glyphicon-folder-open glyphicon-folder"></span>Open</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-download btn-edit"></span>Download</a></li>
                                         <li><a href="#" data-toggle="modal" data-target="#delete-resource-file"><span class="glyphicon glyphicon-trash icon-button btn-remove"></span>Delete</a></li>
                                     </ul>
                                 </div>
