--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -66,13 +66,13 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 	height: 160px;
 	padding: 0;
 	background: #FFF;
-	border: 1px solid #909090;
+	border: 1px solid #DDD;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
-	-webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
@@ -3057,7 +3057,7 @@ h4.title {
 
 .arrow_box:before {
     border-color: rgba(194, 225, 245, 0);
-    border-bottom-color: #909090;
+    border-bottom-color: #DDD;
     border-width: 11px;
     margin-left: -11px;
 }
@@ -3253,6 +3253,8 @@ button.no-style:focus {
     pointer-events: none;
 }
 
+
+/* -------------- File browser styling ---------------- */
 .file-browser {
     margin-bottom: 20px;
 }
@@ -3312,9 +3314,8 @@ button.no-style:focus {
     border:1px solid #DDD;
 }
 .files-container {
-    padding: 5px 50px;
+    padding: 5px 36px;
     background-color: #F0FBFF;
-    background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 
 .file-browser-search {
