--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1,6 +1,10 @@
 /*------------------------------------------------------------------
 theme core
 -------------------------------------------------------------------*/
+@font-face {
+    font-family: "Russo One";
+    src: url(../fonts/Russo_One.ttf) format("truetype");
+}
 
 html, body {
     font-family: 'Lato', sans-serif;
@@ -24,6 +28,40 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 
 /* ===== Navbar ===== */
 
+img.logo-badge {
+    height: 38px;
+    margin-right: 7px;
+}
+
+h1.logo {
+    font-family: "Russo One", arial, sans-serif;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 800;
+    font-size: 26px;
+    float: left;
+    line-height: 1.8;
+    text-transform: initial;
+    cursor: pointer;
+    margin-right: 40px;
+}
+
+h1.logo a:hover {
+    text-decoration: none;
+}
+
+h1.logo a {
+    color: #fff;
+}
+
+.highlight {
+    color: #2ec0c3;
+}
+
+.header h1.logo a .highlight {
+    color: #2ec0c3;
+}
+
 .navbar-brand {
     padding: 0;
     padding-top: 10px;
@@ -35,7 +73,6 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 .navbar-inverse {
-  background-color: #FFF;
   border: none;
 }
 
@@ -46,8 +83,9 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  	color: #333;
-    background-color: #FFF !important;
+    color: #2ec0c3;
+    background-color: initial !important;
+    font-weight: bold;
 }
 
 .navbar-inverse .navbar-brand {
@@ -55,8 +93,9 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: #777;
-    font: 13px/18px 'Open Sans',arial,sans-serif;
+    color: #FFF;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Lato', arial, sans-serif;
 }
 
 .navbar-nav > li > .dropdown-menu {
@@ -76,7 +115,7 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-	color: #333;
+	color: #2ec0c3;
 	-webkit-transition: color 100ms linear;
 	-moz-transition: color 100ms linear;
 	-o-transition: color 100ms linear;
@@ -85,10 +124,7 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 
 .navbar-inverse {
     text-transform: uppercase;
-    border-bottom: 1px solid #DDD;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    background: rgba(48, 56, 67, 0.9);
 }
 
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
@@ -1327,10 +1363,12 @@ table.table-plain td{
 }
 
 .page-title {
-    font-weight: 500;
-    margin: 30px 0;
-    margin-top: 10px;
-    width: calc(100% - 100px);
+    font-size: 28px;
+    font-family: 'Open Sans', arial, sans-serif;
+    font-weight: 800;
+    color: #505c70;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 .label-file-name{
@@ -2147,7 +2185,7 @@ button.loading {
     font-family: "Glyphicons Halflings";
     float: left;
     font-size: 36px;
-    color: #2D9EB3;
+    color: #2ec0c3;
     border: 2px solid #ddd;
     height: 40px;
     width: 40px;
@@ -2161,7 +2199,7 @@ button.loading {
     font-family: "Glyphicons Halflings";
     float: left;
     font-size: 72px;
-    color: #2D9EB3;
+    color: #2ec0c3;
     border: 2px solid #ddd;
     height: 80px;
     width: 80px;
@@ -3015,8 +3053,8 @@ h4.title {
 	font-family: "Glyphicons Halflings";
 	float: left;
 	font-size: 30px;
-	color: #2D9EB3;
-	border: 1px solid #9C9C9C;
+	color: #2ec0c3;
+	border: 1px solid #FFF;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -3313,9 +3351,11 @@ button.no-style:focus {
 .file-browser-container {
     border:1px solid #DDD;
 }
+
 .files-container {
     padding: 5px 36px;
-    background-color: #F0FBFF;
+    background-color: #FAFAFA;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 }
 
 .file-browser-search {
